--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="md:col-span-1">
         <!-- Photo placeholder -->
         <div class="relative rounded-2xl overflow-hidden border border-white/10 shadow-glass aspect-[1/1] bg-gradient-to-br from-base-700 to-base-600 flex items-center justify-center">
-          <img src="assets/me.jpg" alt="Ziqiang Fan (Zack)" class="w-full h-full object-cover object-[55%_50%]" id="heroPhoto"/>
+          <img src="assets/me.jpg" alt="Ziqiang Fan (Zack)" id="heroPhoto" class="absolute inset-0 w-full h-full object-cover object-center"/>
           <div id="heroPhotoFallback" class="text-center px-4">
             <div class="text-4xl">📷</div>
             <p class="mt-2 text-sm text-slate-300" data-i18n="hero.photo">Add your photo at assets/me.jpg</p>
