--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     .card { background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
             backdrop-filter: blur(8px); border: 1px solid rgba(255,255,255,0.08); }
     .chip { border: 1px solid rgba(255,255,255,0.14); background: rgba(255,255,255,0.05); }
+    @keyframes fadeUp { from { opacity:0; transform: translateY(12px); } to { opacity:1; transform: translateY(0); } }
+    .reveal { opacity:0; transform: translateY(12px); }
+    .animate-fadeUp { animation: fadeUp .6s ease-out forwards; }
   </style>
 </head>
 <body class="text-slate-200 antialiased">
@@ -70,8 +73,8 @@
         <h1 class="text-3xl sm:text-5xl font-extrabold text-white tracking-tight">
           <span data-i18n="hero.title">Ziqiang Fan (Zack)</span>
         </h1>
-        <p class="mt-4 text-slate-300 leading-relaxed max-w-2xl" data-i18n="hero.subtitle">
-          HR specialist turned data practitioner. I use SQL, Python, and BI tools to solve recruiting, retention, and workforce planning problems.
+        <p class="mt-4 text-slate-200 leading-relaxed max-w-2xl text-base sm:text-lg" data-i18n="hero.subtitle">
+          Data-driven HR professional; passionate about AI and analytics; disciplined, adaptive, and growth-oriented; multicultural background with strong communication skills; motivated to create meaningful impact through data-driven strategies
         </p>
         <div class="mt-6 flex flex-wrap items-center gap-3">
           <a id="resumeBtnHero" href="#" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 rounded-xl bg-accent-600 hover:bg-accent-700 text-white text-sm font-medium transition">
@@ -83,13 +86,13 @@
             <span data-i18n="hero.ctaEmail">Email Me</span>
           </a>
         </div>
-        <p class="mt-3 text-xs text-slate-400" data-i18n="hero.note">Open to HR analytics / people data roles and data analyst positions; also applying to data-related master's programs.</p>
+        <p class="mt-3 text-sm text-slate-300 font-medium" data-i18n="hero.note">open to HR and data opportunities</p>
       </div>
       <div class="md:col-span-1">
-        <!-- Photo placeholder -->
+        <!-- Photo -->
         <div class="relative rounded-2xl overflow-hidden border border-white/10 shadow-glass aspect-[1/1] bg-gradient-to-br from-base-700 to-base-600 flex items-center justify-center">
           <img src="assets/me.jpg" alt="Ziqiang Fan (Zack)" id="heroPhoto" class="absolute inset-0 w-full h-full object-cover object-center"/>
-          <div id="heroPhotoFallback" class="text-center px-4">
+          <div id="heroPhotoFallback" class="text-center px-4 hidden">
             <div class="text-4xl">📷</div>
             <p class="mt-2 text-sm text-slate-300" data-i18n="hero.photo">Add your photo at assets/me.jpg</p>
           </div>
@@ -131,7 +134,7 @@
       <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-4">
         <div>
           <h3 class="text-lg font-semibold text-white" data-i18n="contact.title">Get in touch</h3>
-          <p class="text-slate-300 text-sm mt-1" data-i18n="contact.note">Open to HR analytics, people data, and data analyst roles; also applying to data-related master's programs. US: +1 217-979-5004 · CN: +86 18519220783</p>
+          <p class="text-slate-300 text-sm mt-1" data-i18n="contact.note">open to HR and data opportunities</p>
         </div>
         <div class="flex flex-wrap items-center gap-3">
           <a id="emailLink" href="#" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-white/10 hover:bg-white/5 text-sm">
@@ -146,10 +149,33 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5C5.73.5.98 5.25.98 11.52c0 4.85 3.14 8.96 7.5 10.41.55.1.75-.24.75-.53 0-.26-.01-1.13-.02-2.06-3.05.66-3.69-1.31-3.69-1.31-.5-1.27-1.22-1.61-1.22-1.61-.99-.68.08-.67.08-.67 1.1.08 1.68 1.14 1.68 1.14.98 1.67 2.58 1.18 3.21.9.1-.71.38-1.18.68-1.45-2.44-.28-5.01-1.22-5.01-5.44 0-1.2.43-2.18 1.13-2.95-.11-.28-.49-1.42.1-2.96 0 0 .92-.29 3.01 1.13a10.47 10.47 0 0 1 5.48 0c2.09-1.42 3.01-1.13 3.01-1.13.59 1.54.22 2.68.11 2.96.71.77 1.13 1.75 1.13 2.95 0 4.23-2.58 5.16-5.03 5.43.39.34.73 1.01.73 2.05 0 1.48-.01 2.68-.01 3.05 0 .29.2.64.76.53 4.35-1.45 7.49-5.56 7.49-10.41C23.02 5.25 18.27.5 12 .5z"/></svg>
             <span>GitHub</span>
           </a>
+          <a id="callBtn" href="tel:+8618519220783" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-white/10 hover:bg-white/5 text-sm">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.02-.24c1.12.37 2.33.57 3.57.57a1 1 0 011 1V21a1 1 0 01-1 1C10.85 22 2 13.15 2 2a1 1 0 011-1h3.49a1 1 0 011 1c0 1.24.2 2.45.57 3.57a1 1 0 01-.24 1.02l-2.2 2.2z"/></svg>
+            <span data-i18n="contact.call">Call</span>
+          </a>
+          <button id="wxBtn" type="button" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-white/10 hover:bg-white/5 text-sm">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor"><path d="M18 3a6 6 0 00-6 6 6 6 0 00-6 6c0 3.314 2.686 6 6 6h6c3.314 0 6-2.686 6-6s-2.686-6-6-6zM9 9a1 1 0 110-2 1 1 0 010 2zm10 0a1 1 0 110-2 1 1 0 010 2zM12 14a1 1 0 100-2 1 1 0 000 2z"/></svg>
+            <span data-i18n="contact.wechat">WeChat</span>
+          </button>
         </div>
       </div>
     </div>
   </section>
+
+  <!-- WeChat Modal -->
+  <div id="wechatModal" class="fixed inset-0 z-50 hidden items-center justify-center">
+    <div class="absolute inset-0 bg-black/60"></div>
+    <div class="relative card rounded-2xl p-4 shadow-glass w-[320px]">
+      <div class="flex items-center justify-between mb-2">
+        <h4 class="text-white text-sm font-semibold" data-i18n="contact.wechat">WeChat</h4>
+        <button id="wxClose" class="text-slate-300 hover:text-white">✕</button>
+      </div>
+      <div class="rounded-xl overflow-hidden bg-white">
+        <img id="wxQR" src="assets/wechat_qr.jpg" alt="WeChat QR" class="w-full h-auto"/>
+      </div>
+      <p class="mt-2 text-xs text-slate-400" data-i18n="contact.wechatHint">Scan to add on WeChat</p>
+    </div>
+  </div>
 
   <footer class="py-8 text-center text-xs text-slate-500">
     <p>© <span id="year"></span> <span class="text-slate-300">Ziqiang Fan</span>. <span data-i18n="footer.rights">All rights reserved.</span></p>
@@ -163,6 +189,8 @@
       email: 'mailto:zackkkk1@outlook.com',
       linkedin: 'https://linkedin.com/in/ziqiang-fan-672607289',
       github: 'https://github.com/your-username',
+      phone: 'tel:+8618519220783',
+      wechatQR: 'assets/wechat_qr.jpg',
       projects: { bellabeat: '#' }
     };
 
@@ -173,6 +201,7 @@
     document.getElementById('emailLink').href = LINKS.email;
     document.getElementById('lnBtn').href = LINKS.linkedin;
     document.getElementById('ghBtn').href = LINKS.github;
+    const callBtn = document.getElementById('callBtn'); if (callBtn) callBtn.href = LINKS.phone || 'tel:+8618519220783';
 
     // i18n content
     const I18N = {
@@ -181,9 +210,9 @@
         hero: {
           tag:'People • Process • Analytics',
           title:'Ziqiang Fan (Zack)',
-          subtitle:'HR specialist turned data practitioner. I use SQL, Python, and BI tools to solve recruiting, retention, and workforce planning problems.',
+          subtitle:'Data-driven HR professional; passionate about AI and analytics; disciplined, adaptive, and growth-oriented; multicultural background with strong communication skills; motivated to create meaningful impact through data-driven strategies',
           ctaResume:'Download Resume', ctaEmail:'Email Me',
-          note:"Open to HR analytics / people data roles and data analyst positions; also applying to data-related master's programs.",
+          note:'open to HR and data opportunities',
           photo:'Add your photo at assets/me.jpg'
         },
         projects: {
@@ -227,17 +256,17 @@
             { school:'Syracuse University', degree:"B.A. in Psychology, Minor in Japanese Literature (Dean's List, 2022 Fall & Spring)", period:'Sep 2019 – Jun 2023' }
           ]
         },
-        contact: { title:'Get in touch', note:"Open to HR analytics, people data, and data analyst roles; also applying to data-related master's programs. US: +1 217-979-5004 · CN: +86 18519220783", email:'Email' },
+        contact: { title:'Get in touch', note:'open to HR and data opportunities', email:'Email', call:'Call', wechat:'WeChat', wechatHint:'Scan to add on WeChat' },
         footer: { rights:'All rights reserved.' }
       },
       zh: {
         nav: { projects:'项目', skills:'技能', experience:'经历', education:'教育', contact:'联系' },
         hero: {
           tag:'以人为本 · 流程优化 · 数据分析',
-          title:'范子强（Zack）',
-          subtitle:'从 HR 转向数据实务。我用 SQL、Python 与 BI 工具解决招聘、离职与人力规划问题。',
+          title:'樊子强（Zack）',
+          subtitle:'数据驱动的人力资源从业者，热衷于 AI 与数据分析；自律、适应力强、持续成长；多元文化背景与良好沟通能力；以数据驱动策略创造有意义的业务影响',
           ctaResume:'下载简历', ctaEmail:'给我发邮件',
-          note:'开放 HR 数据分析 / 人力分析 以及数据分析岗位；同时申请数据相关研究生项目。',
+          note:'开放 HR 与数据相关机会',
           photo:'请将你的照片放在 assets/me.jpg'
         },
         projects: {
@@ -281,7 +310,7 @@
             { school:'雪城大学（Syracuse University）', degree:'心理学 学士，日语文学 辅修（2022 秋&春 院长名单）', period:'2019 年 9 月 – 2023 年 6 月' }
           ]
         },
-        contact: { title:'联系我', note:'欢迎 HR 数据分析 / 人力分析 与数据分析岗位机会；也在申请数据相关研究生项目。美国：+1 217-979-5004 · 大陆：+86 18519220783', email:'邮箱' },
+        contact: { title:'联系我', note:'开放 HR 与数据相关机会', email:'邮箱', call:'电话', wechat:'微信', wechatHint:'扫码添加微信' },
         footer: { rights:'保留所有权利。' }
       }
     };
@@ -295,7 +324,7 @@
        'skills.title',
        'experience.title',
        'education.title',
-       'contact.title','contact.note','contact.email',
+       'contact.title','contact.note','contact.email','contact.call','contact.wechat','contact.wechatHint',
        'footer.rights'].forEach(key => {
         document.querySelectorAll(`[data-i18n="${key}"]`).forEach(el => {
           const value = key.split('.').reduce((o,k)=> (o||{})[k], I18N[currentLang]);
@@ -310,7 +339,7 @@
     function renderProjects(){
       const grid = document.getElementById('projectsGrid'); grid.innerHTML='';
       I18N[currentLang].projects.items.forEach(p => {
-        const card=document.createElement('article'); card.className='card rounded-2xl p-5 shadow-glass hover:translate-y-[-2px] transition';
+        const card=document.createElement('article'); card.className='card rounded-2xl p-5 shadow-glass hover:translate-y-[-2px] transition reveal';
         const h=document.createElement('h3'); h.className='text-white font-semibold'; h.textContent=p.title;
         const d=document.createElement('p'); d.className='mt-2 text-sm text-slate-300'; d.textContent=p.desc;
         const chips=document.createElement('div'); chips.className='mt-3 flex flex-wrap gap-2'; p.badges.forEach(b=>chips.appendChild(badgeEl(b)));
@@ -322,7 +351,7 @@
     function renderSkills(){
       const grid=document.getElementById('skillsGrid'); grid.innerHTML='';
       I18N[currentLang].skills.groups.forEach(g=>{
-        const card=document.createElement('div'); card.className='card rounded-2xl p-5 shadow-glass';
+        const card=document.createElement('div'); card.className='card rounded-2xl p-5 shadow-glass reveal';
         const h=document.createElement('h3'); h.className='text-white font-semibold'; h.textContent=g.name;
         const ul=document.createElement('ul'); ul.className='mt-3 space-y-1 text-sm text-slate-300 list-disc list-inside';
         g.items.forEach(it=>{ const li=document.createElement('li'); li.textContent=it; ul.appendChild(li); });
@@ -333,7 +362,7 @@
     function renderExperience(){
       const box=document.getElementById('expList'); box.innerHTML='';
       I18N[currentLang].experience.items.forEach(item=>{
-        const wrap=document.createElement('div'); wrap.className='card rounded-2xl p-5 shadow-glass';
+        const wrap=document.createElement('div'); wrap.className='card rounded-2xl p-5 shadow-glass reveal';
         const top=document.createElement('div'); top.className='flex flex-col sm:flex-row sm:items-center justify-between gap-2';
         const left=document.createElement('div');
         const role=document.createElement('div'); role.className='text-white font-semibold'; role.textContent=item.role;
@@ -350,7 +379,7 @@
     function renderEducation(){
       const grid=document.getElementById('eduList'); grid.innerHTML='';
       I18N[currentLang].education.items.forEach(e=>{
-        const card=document.createElement('div'); card.className='card rounded-2xl p-5 shadow-glass';
+        const card=document.createElement('div'); card.className='card rounded-2xl p-5 shadow-glass reveal';
         const school=document.createElement('div'); school.className='text-white font-semibold'; school.textContent=e.school;
         const deg=document.createElement('div'); deg.className='text-sm text-slate-300'; deg.textContent=e.degree;
         const period=document.createElement('div'); period.className='text-xs text-slate-400 mt-1'; period.textContent=e.period;
@@ -360,11 +389,43 @@
 
     function renderAll(){ renderBasicTexts(); renderProjects(); renderSkills(); renderExperience(); renderEducation(); }
 
-    document.getElementById('langBtn').addEventListener('click', ()=>{ currentLang = currentLang==='en' ? 'zh' : 'en'; renderAll(); });
+    // Language toggle
+    document.getElementById('langBtn').addEventListener('click', ()=>{ currentLang = currentLang==='en' ? 'zh' : 'en'; renderAll(); setupReveal(); });
+
+    // Hero image fallback
+    const heroImg = document.getElementById('heroPhoto');
+    const heroFallback = document.getElementById('heroPhotoFallback');
+    function showHero(){ heroImg.classList.remove('hidden'); heroFallback.classList.add('hidden'); }
+    function hideHero(){ heroImg.classList.add('hidden'); heroFallback.classList.remove('hidden'); }
+    heroImg.addEventListener('load', showHero);
+    heroImg.addEventListener('error', hideHero);
+    if (heroImg.complete) { if (heroImg.naturalWidth > 0) showHero(); else hideHero(); }
+
+    // WeChat modal
+    const wxBtn = document.getElementById('wxBtn');
+    const wxModal = document.getElementById('wechatModal');
+    const wxClose = document.getElementById('wxClose');
+    const wxQR = document.getElementById('wxQR');
+    if (wxQR && LINKS.wechatQR) wxQR.src = LINKS.wechatQR;
+    function openWx(){ wxModal.classList.remove('hidden'); wxModal.classList.add('flex'); }
+    function closeWx(){ wxModal.classList.add('hidden'); wxModal.classList.remove('flex'); }
+    if (wxBtn) wxBtn.addEventListener('click', openWx);
+    if (wxClose) wxClose.addEventListener('click', closeWx);
+    if (wxModal) wxModal.addEventListener('click', (e)=>{ if (e.target === wxModal.firstElementChild) closeWx(); });
+    document.addEventListener('keydown', (e)=>{ if (e.key === 'Escape') closeWx(); });
+
+    // Reveal on scroll
+    function setupReveal(){
+      const io = new IntersectionObserver(entries=>{
+        entries.forEach(e=>{ if(e.isIntersecting){ e.target.classList.add('animate-fadeUp'); io.unobserve(e.target); } });
+      },{ threshold: 0.15 });
+      document.querySelectorAll('.reveal').forEach(el=> io.observe(el));
+    }
 
     document.getElementById('year').textContent = new Date().getFullYear();
     // Initial render
     renderAll();
+    setupReveal();
   </script>
 </body>
 </html>
