--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .animate-fadeUp { animation: fadeUp .6s ease-out forwards; }
   </style>
 </head>
-<body class="text-slate-200 antialiased">
+<body class="text-slate-200 antialiased text-[17px] sm:text-[18px]">
   <!-- ===== Top Nav ===== -->
   <header class="sticky top-0 z-50 bg-base-900/70 backdrop-blur border-b border-white/5">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 py-3 flex items-center justify-between">
@@ -86,7 +86,7 @@
             <span data-i18n="hero.ctaEmail">Email Me</span>
           </a>
         </div>
-        <p class="mt-3 text-sm text-slate-300 font-medium" data-i18n="hero.note">open to HR and data opportunities</p>
+        <p class="mt-3 text-base sm:text-lg text-slate-200 font-semibold" data-i18n="hero.note">open to HR and data opportunities</p>
       </div>
       <div class="md:col-span-1">
         <!-- Photo -->
@@ -154,7 +154,7 @@
             <span data-i18n="contact.call">Call</span>
           </a>
           <button id="wxBtn" type="button" class="inline-flex items-center gap-2 px-3 py-2 rounded-xl border border-white/10 hover:bg-white/5 text-sm">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor"><path d="M18 3a6 6 0 00-6 6 6 6 0 00-6 6c0 3.314 2.686 6 6 6h6c3.314 0 6-2.686 6-6s-2.686-6-6-6zM9 9a1 1 0 110-2 1 1 0 010 2zm10 0a1 1 0 110-2 1 1 0 010 2zM12 14a1 1 0 100-2 1 1 0 000 2z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 48 48" fill="currentColor"><path d="M19 6c-8.284 0-15 5.82-15 13 0 4.13 2.33 7.8 5.97 10.17L9 34l4.39-2.44c1.7.47 3.52.72 5.41.72 8.284 0 15-5.82 15-13S27.284 6 19 6zm-6 11a2 2 0 110-4 2 2 0 010 4zm10 0a2 2 0 110-4 2 2 0 010 4z"/><path d="M29 20c8.284 0 15 5.82 15 13 0 3.2-1.4 6.13-3.74 8.38L42 44l-4.08-2.27c-1.45.4-3 .61-4.62.61-8.284 0-15-5.82-15-13 0-3.2 1.4-6.13 3.74-8.38A17.7 17.7 0 0129 20zm-6 9a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4z"/></svg>
             <span data-i18n="contact.wechat">WeChat</span>
           </button>
         </div>
@@ -222,8 +222,38 @@
         skills: {
           title:'Skills',
           groups:[
-            { name:'HR', items:['Recruiting & staffing','Benefits & compliance','Employee relations','Onboarding & HR operations']},
-            { name:'Data', items:['SQL','Python (Pandas, NumPy)','Excel/Sheets','Tableau / Power BI']}
+            { name:'Data & Analytics', items:[
+    'SQL (data extraction, joins, aggregations)',
+    'Python (data cleaning, visualization, statistics)',
+    'Advanced Excel / Google Sheets (formulas, pivot tables, dashboards)',
+    'Tableau, Power BI, Google Data Studio',
+    'HR analytics (recruiting funnel, turnover, workforce planning)'
+  ]},
+  { name:'HR & People Insights', items:[
+    'Recruitment analytics and workforce planning',
+    'Employee relations and HR compliance',
+    'Compensation and benefits analysis',
+    'HRIS systems (Workday, ADP, BambooHR)',
+    'Payroll & E-Verify processes'
+  ]},
+  { name:'Business & Professional', items:[
+    'Data-driven decision making',
+    'Problem solving and critical thinking',
+    'Cross-cultural communication (China, U.S., Japan)',
+    'Project coordination and process optimization',
+    'Adaptability and continuous learning'
+  ]},
+  { name:'Tools & AI', items:[
+    'Proficiency with AI tools (ChatGPT, Copilot, Bard, automation workflows)',
+    'GitHub & Kaggle (portfolio and code publishing)',
+    'Google Workspace & Microsoft Office Suite',
+    'Basic HTML/CSS for portfolio and web projects'
+  ]},
+  { name:'Languages', items:[
+    'Chinese — Native',
+    'English — Fluent (8+ years in the U.S.)',
+    'Japanese — JLPT N2 (Upper-Intermediate)'
+  ]}
           ]
         },
         experience: {
@@ -276,9 +306,39 @@
         skills: {
           title:'技能',
           groups:[
-            { name:'HR', items:['招聘与配置','福利与合规','员工关系','入职与人事运营']},
-            { name:'数据', items:['SQL','Python（Pandas、NumPy）','Excel/Sheets','Tableau / Power BI']}
-          ]
+  { name:'数据与分析', items:[
+    'SQL（数据提取、关联、聚合）',
+    'Python（数据清洗、可视化、统计）',
+    '高级 Excel / Google 表格（公式、数据透视表、仪表盘）',
+    'Tableau、Power BI、Google Data Studio',
+    'HR 分析（招聘漏斗、离职分析、人力规划）'
+  ]},
+  { name:'HR 与人力洞察', items:[
+    '招聘分析与人力规划',
+    '员工关系与 HR 合规',
+    '薪酬与福利分析',
+    'HRIS 系统（Workday、ADP、BambooHR）',
+    '薪资与 E‑Verify 流程'
+  ]},
+  { name:'商业与通用能力', items:[
+    '数据驱动决策',
+    '问题解决与批判性思维',
+    '跨文化沟通（中国、美国、日本）',
+    '项目协作与流程优化',
+    '适应力与持续学习'
+  ]},
+  { name:'工具与 AI', items:[
+    'AI 工具熟练度（ChatGPT、Copilot、Bard、自动化流程）',
+    'GitHub 与 Kaggle（作品与代码发布）',
+    'Google Workspace 与 Microsoft Office 套件',
+    '基础 HTML/CSS（作品集与网页项目）'
+  ]},
+  { name:'语言', items:[
+    '中文 — 母语',
+    '英文 — 流利（在美 8+ 年）',
+    '日语 — JLPT N2（中上）'
+  ]}
+]
         },
         experience: {
           title:'经历',
