--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       github: 'https://github.com/your-username',
       phone: 'tel:+8618519220783',
       wechatQR: 'assets/wechat_qr.jpg',
-      projects: { bellabeat: '#' }
+      projects: { bellabeat: 'https://github.com/ZackFan101/bellabeat_data_analysis' }
     };
 
     // Wire links
@@ -217,7 +217,7 @@
         },
         projects: {
           title:'Selected Projects', caption:'Practical HR & data work',
-          items:[{ title:'Bellabeat Wellness Usage — Case Study', desc:'Cleaned wearable usage logs, built engagement segments, and visualized activity-calorie patterns to inform feature prioritization.', badges:['Python','Pandas','Matplotlib'], link:LINKS.projects.bellabeat, linkLabel:'Notebook' }]
+          items:[{ title:'Bellabeat Smart Device Usage — Data Analysis', desc:'Exploratory and descriptive analysis of Fitbit-style activity data to generate product insights. Cleaned dailyActivity_merged_cleaned.csv in Excel and calories_Intensities_steps_merged.csv with SQL; EDA and visuals in R (ggplot2). Deliverables include an HTML live report and a PDF final report.', badges:['Excel','SQL','R / ggplot2','RMarkdown'], link:LINKS.projects.bellabeat, linkLabel:'Live Analysis' }]
         },
         skills: {
           title:'Skills',
@@ -301,7 +301,7 @@
         },
         projects: {
           title:'代表项目', caption:'面向业务的 HR × Data 实战',
-          items:[{ title:'Bellabeat 可穿戴使用分析', desc:'清洗使用日志，构建参与度分层；可视化活动‑热量模式，为功能优先级提供依据。', badges:['Python','Pandas','Matplotlib'], link:LINKS.projects.bellabeat, linkLabel:'Notebook' }]
+          items:[{ title:'Bellabeat 可穿戴使用分析', desc:'基于可穿戴设备活动数据的探索性与描述性分析，产出产品与营销洞察。使用 Excel 清洗 dailyActivity_merged_cleaned.csv、用 SQL 清洗 calories_Intensities_steps_merged.csv；在 R（ggplot2）中完成 EDA 与可视化。交付物包含在线 HTML 报告与 PDF 最终报告。', badges:['Excel','SQL','R / ggplot2','RMarkdown'], link:LINKS.projects.bellabeat, linkLabel:'查看在线报告' }]
         },
         skills: {
           title:'技能',
